@@ -11,3 +11,4 @@ without autoconf support.
   - they were accepted to upstream Linux PAM repository
 * Applied fixes by Steve Grubb (tmraz)
 * pam_console: Changed the console.lock file to console/console.lock
+* pam_stack: Overwrite the conversation function too
